--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,189 @@
+@import url("https://fonts.google.com/specimen/Space+Mono");
+
+body {
+  margin: 0;
+  font-size: 1rem;
+  font-family: "Space Mono", monospace;
+  font-weight: 700;
+
+  --primary-color: hsl(183, 100%, 15%);
+  --secondary-color: hsl(172, 67%, 45%);
+  --dark-gray-cyan-color: hsl(186, 14%, 43%);
+  --gray-cyan-color: hsl(184, 14%, 56%);
+  --tertiary-color: hsl(185, 41%, 84%);
+  --quaternary-color: hsl(189, 41%, 97%);
+  --white-color: white;
+
+  label {
+    color: var(--primary-color);
+  }
+
+  input {
+    font-size: 1.5rem;
+    font-family: "Space Mono", monospace;
+    font-weight: 700;
+    outline: none;
+    border-color: transparent;
+    border-radius: 5px;
+    background-color: var(--quaternary-color);
+    height: 3.125rem;
+    padding: 0 1rem;
+    text-align: right;
+    color: var(--primary-color);
+
+    &::placeholder {
+      color: var(--gray-cyan-color);
+    }
+
+    &:focus {
+      border: 2px solid var(--secondary-color);
+    }
+  }
+
+  .input-wrapper {
+    position: relative;
+
+    .input-icon {
+      position: absolute;
+      top: 50%;
+      left: 10px;
+      transform: translateY(-50%);
+      color: var(--gray-cyan-color);
+    }
+  }
+
+  button {
+    font-size: 1.5rem;
+    font-family: "Space Mono", monospace;
+    font-weight: 700;
+    text-transform: uppercase;
+    background-color: var(--primary-color);
+    color: var(--white-color);
+    border: none;
+    border-radius: 5px;
+    height: 3.125rem;
+    cursor: pointer;
+
+    &:hover {
+      background-color: var(--secondary-color);
+      color: var(--primary-color);
+    }
+
+    &.reset-button {
+      background-color: var(--secondary-color);
+      color: var(--primary-color);
+
+      &:hover {
+        background-color: var(--tertiary-color);
+      }
+
+      &:disabled {
+        background-color: var(--dark-gray-cyan-color);
+        cursor: not-allowed;
+      }
+    }
+  }
+
+  p {
+    margin: 0;
+  }
+}
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: var(--tertiary-color);
+}
+
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+}
+
+main {
+  background: var(--white-color);
+  border-radius: 2rem;
   padding: 2rem;
-  text-align: center;
-}
+  height: 70%;
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
+  .container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    gap: 3rem;
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+    section {
+      display: flex;
+      flex-direction: column;
+      gap: 1.5rem;
+
+      div {
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+      }
+
+      &.calculate-section {
+        flex: 1;
+        justify-content: space-between;
+
+        .button-group {
+          display: grid;
+          grid-template-columns: repeat(2, 1fr);
+          grid-auto-rows: 3.125rem;
+          gap: 1rem;
+
+          input {
+            width: 100%;
+            box-sizing: border-box;
+          }
+        }
+      }
+
+      &.results-section {
+        background-color: var(--primary-color);
+        border-radius: 1rem;
+        padding: 3rem 2rem 2rem;
+        gap: 2rem;
+
+        div {
+          flex-direction: row;
+        }
+
+        .span-wrapper {
+          display: flex;
+          flex-direction: column;
+
+          p {
+            color: var(--tertiary-color);
+          }
+
+          span {
+            color: var(--gray-cyan-color);
+            font-size: 0.75rem;
+          }
+        }
+
+        h2 {
+          flex: 1;
+          text-align: right;
+          color: var(--secondary-color);
+          margin: 0;
+        }
+      }
+    }
   }
-  to {
-    transform: rotate(360deg);
-  }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
 }
