--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
 @import url("https://fonts.google.com/specimen/Space+Mono");
 
+html {
+  box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
 body {
   margin: 0;
   font-size: 1rem;
@@ -86,6 +95,10 @@ body {
         background-color: var(--dark-gray-cyan-color);
         cursor: not-allowed;
       }
+
+      @media screen and (min-width: 1024px) {
+        margin-top: auto;
+      }
     }
   }
 
@@ -99,8 +112,16 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   background-color: var(--tertiary-color);
+
+  @media screen and (min-width: 1024px) {
+    height: 100vh;
+  }
+}
+
+header,
+footer {
+  padding: 2rem 1rem;
 }
 
 header {
@@ -111,10 +132,22 @@ header {
 }
 
 main {
+  box-sizing: border-box;
   background: var(--white-color);
   border-radius: 2rem;
   padding: 2rem;
   height: 70%;
+  max-width: 400px;
+
+  @media screen and (min-width: 1024px) {
+    max-width: 800px;
+    height: 50%;
+    max-height: 550px;
+  }
+
+  @media screen and (min-width: 1440px) {
+    max-width: 1000px;
+  }
 
   .container {
     display: flex;
@@ -122,10 +155,18 @@ main {
     height: 100%;
     gap: 3rem;
 
+    @media screen and (min-width: 1024px) {
+      flex-direction: row;
+    }
+
     section {
       display: flex;
       flex-direction: column;
       gap: 1.5rem;
+
+      @media screen and (min-width: 1024px) {
+        flex: 1;
+      }
 
       div {
         display: flex;
@@ -137,11 +178,19 @@ main {
         flex: 1;
         justify-content: space-between;
 
+        @media screen and (min-width: 1440px) {
+          padding: 2rem;
+        }
+
         .button-group {
           display: grid;
           grid-template-columns: repeat(2, 1fr);
           grid-auto-rows: 3.125rem;
           gap: 1rem;
+
+          @media screen and (min-width: 1440px) {
+            grid-template-columns: repeat(3, 1fr);
+          }
 
           input {
             width: 100%;
@@ -201,4 +250,8 @@ footer {
   justify-content: center;
   align-items: center;
   flex: 1;
+
+  @media screen and (min-width: 1024px) {
+    justify-content: flex-end;
+  }
 }
