--- a/src/App.css
+++ b/src/App.css
@@ -60,7 +60,7 @@ body {
     .input-icon {
       position: absolute;
       top: 50%;
-      left: 10px;
+      left: 1rem;
       transform: translateY(-50%);
       color: var(--gray-cyan-color);
     }
@@ -79,6 +79,11 @@ body {
     cursor: pointer;
 
     &:hover {
+      background-color: var(--tertiary-color);
+      color: var(--primary-color);
+    }
+
+    &.active {
       background-color: var(--secondary-color);
       color: var(--primary-color);
     }
